--- a/style.css
+++ b/style.css
@@ -99,9 +99,15 @@ body {
   box-shadow: -1px -1px 3px rgba(255, 255, 255, 0.1),
     1px 1px 3px rgba(0, 0, 0, 0.8);
   margin: 10px 4px;
+  cursor: pointer;
 }
 
 .pressed {
   opacity: 0.5;
   box-shadow: -1px -1px 3px var(--background);
+}
+
+.auto_music_on {
+  box-shadow: inset -1px -1px 3px rgba(255, 255, 255, 0.1),
+    inset 1px 1px 3px rgba(0, 0, 0, 0.8) !important;
 }
